--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -179,4 +179,8 @@
     <string name="select_color">Выбрать цвет</string>
     <string name="edit_account">Редактировать учетную запись</string>
     <string name="edit_account_summary">Редатирование имени и пароля пользователя</string>
+    <string name="tms_layer_cache_size">TMS in-memory cache size</string>
+    <string name="make_grayscale">Make grayscale</string>
+    <string name="contrast">Contrast</string>
+    <string name="brightness">Brightness</string>
 </resources>
