--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -178,8 +178,10 @@
     <string name="select_color">Выбрать цвет</string>
     <string name="edit_account">Редактировать учетную запись</string>
     <string name="edit_account_summary">Редатирование имени и пароля пользователя</string>
-    <string name="tms_layer_cache_size">TMS in-memory cache size</string>
-    <string name="make_grayscale">Make grayscale</string>
-    <string name="contrast">Contrast</string>
-    <string name="brightness">Brightness</string>
+    <string name="tms_layer_cache_size">Размер кэша тайлов TMS</string>
+    <string name="make_grayscale">Сделать однотоновым</string>
+    <string name="contrast">Контраст</string>
+    <string name="brightness">Яркость</string>
+    <string name="menu_zoom_extent">Увеличить до охвата</string>
+    <string name="menu_download_tiles">Загрузить тайлы</string>
 </resources>
