--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -184,4 +184,7 @@
     <string name="brightness">Яркость</string>
     <string name="menu_zoom_extent">Увеличить до охвата</string>
     <string name="menu_download_tiles">Загрузить тайлы</string>
+    <string name="select_zoom_levels_to_download">Выберите уровни зума, что бы загрузить тайлы в текущем охвате</string>
+    <string name="start">Start</string>
+    <string name="select_zoom_levels_to_download_title">Select zoom levels to download</string>
 </resources>
