--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -187,4 +187,13 @@
     <string name="select_zoom_levels_to_download">Select min and max zoom levels to download tiles of current extent</string>
     <string name="start">Start</string>
     <string name="select_zoom_levels_to_download_title">Select zoom levels to download</string>
+    <string name="download_complete">Download complete</string>
+    <string name="download_in_progress">Download in progress</string>
+    <string name="cancel_download">Download canceled</string>
+    <string name="download_tiles">Download tiles</string>
+    <string name="form_tiles_list">Form tiles list</string>
+    <string name="tracks_running">Track is recording now</string>
+    <string name="tracks_title">Track %s</string>
+    <string name="tracks_stop">Stop</string>
+    <string name="tracks_open">Open</string>
 </resources>
