--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -196,4 +196,5 @@
     <string name="tracks_title">Track %s</string>
     <string name="tracks_stop">Stop</string>
     <string name="tracks_open">Open</string>
+    <string name="download_tiles_finished">Tiles download finished</string>
 </resources>
