--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -197,4 +197,5 @@
     <string name="tracks_stop">Стоп</string>
     <string name="tracks_open">Открыть</string>
     <string name="download_tiles_finished">Завершена загрузка тайлов</string>
+    <string name="not_implemented">Not implemented yet</string>
 </resources>
