Add ngw lookup table

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -198,4 +198,5 @@
     <string name="tracks_open">Open</string>
     <string name="download_tiles_finished">Tiles download finished</string>
     <string name="not_implemented">Not implemented yet</string>
+    <string name="layer_lookuptable">Lookup table</string>
 </resources>
