--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -198,4 +198,5 @@
     <string name="tracks_open">Открыть</string>
     <string name="download_tiles_finished">Завершена загрузка тайлов</string>
     <string name="not_implemented">Not implemented yet</string>
+    <string name="layer_lookuptable">Lookup table</string>
 </resources>
