--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -200,4 +200,5 @@
     <string name="not_implemented">Not implemented yet</string>
     <string name="layer_lookuptable">Lookup table</string>
     <string name="zoom_levels_to_show">Zoom levels to show layer</string>
+    <string name="alpha">Transparancy</string>
 </resources>
