--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -61,7 +61,6 @@
     <string name="select">Select</string>
     <string name="select_ngw_layer">Select NextGIS Web Layer</string>
     <string name="ngw_account">NextGIS Web account</string>
-    <string name="message_loading">Loading…</string>
     <string name="loading_summary">Wait a little. The data is loading</string>
     <string name="up_dots">..</string>
     <string name="up">Up</string>
@@ -107,7 +106,6 @@
     <string name="create_vector_layer">Create vector layer</string>
     <string name="new_layer">New layer</string>
     <string name="message_opening">Opening…</string>
-    <string name="error_layer_create">Create layer failed</string>
     <string name="message_layer_created">Layer created</string>
     <string name="error_form_create">Form create failed</string>
     <string name="system_default">System default</string>
@@ -211,4 +209,5 @@
     <string name="polygon">Polygon</string>
     <string name="multi_polygon">Multipolygon</string>
     <string name="update_coordinates">Update coordinates</string>
+    <string name="background_task_started">The layer initialisation task started</string>
 </resources>
