--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -212,4 +212,5 @@
     <string name="update_coordinates">Update coordinates</string>
     <string name="background_task_started">The layer initialisation task started</string>
     <string name="process_layer">Process layer</string>
+    <string name="error_unsupported_layer_type">Current layer type is unsupported </string>
 </resources>
