--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -212,4 +212,5 @@
     <string name="update_coordinates">Обновить координаты</string>
     <string name="background_task_started">Задача инициализации слоя запущена</string>
     <string name="process_layer">Обработка слоя</string>
+    <string name="error_unsupported_layer_type">Данный тип слоя не поддерживается</string>
 </resources>
