--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -199,7 +199,7 @@
     <string name="not_implemented">Пока не сделано</string>
     <string name="layer_lookuptable">Справочник</string>
     <string name="zoom_levels_to_show">Уровни зума, на которых виден слой</string>
-    <string name="alpha">Прозрачность</string>
+    <string name="alpha">Непрозрачность</string>
     <string name="layerInfo">Информация о слое</string>
     <string name="geom_type">Тип геометрии</string>
     <string name="feature_count">Количество записей</string>
