--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="delete_account_warn_msg">Account will be deleted!\nAll account layers will be deleted!\nCurrent sync will be stopped!</string>
     <string name="waiting">Waiting</string>
     <string name="wait_sync_stopping">Waiting of synchronization stopping</string>
+    <string name="add">Add</string>
     <string name="select">Select</string>
     <string name="select_ngw_layer">Select NextGIS Web Layer</string>
     <string name="ngw_account">NextGIS Web account</string>
