--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -214,4 +214,5 @@
     <string name="background_task_started">The layer initialisation task started</string>
     <string name="process_layer">Process layer</string>
     <string name="error_unsupported_layer_type">Current layer type is unsupported </string>
+    <string name="value_not_from_list">Value is not from list</string>
 </resources>
