--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -215,4 +215,7 @@
     <string name="process_layer">Обработка слоя</string>
     <string name="error_unsupported_layer_type">Данный тип слоя не поддерживается</string>
     <string name="value_not_from_list">Значение не из списка</string>
+    <string name="share_gpx_multiple">Как сохранить выбранные треки?</string>
+    <string name="share_gpx_separate">По отдельности</string>
+    <string name="share_gpx_together">В один файл</string>
 </resources>
