--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -118,7 +118,7 @@
     <string name="one_hour">1 hour</string>
     <string name="two_hours">2 hours</string>
     <string name="sync_set_interval">Set synchronization interval</string>
-    <string name="last_sync_time">Last sync time</string>
+    <string name="last_sync_time">Synced %1$s at %2$s</string>
     <string name="warning_different_credentials">Existing account differs the one from form. The existing account will be used</string>
     <string name="error_no_location">No location</string>
     <string name="error_layer_not_inited">Layer is not initialized. Abort</string>
