Move resources from app project

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -218,4 +218,5 @@
     <string name="share_gpx_multiple">Как сохранить выбранные треки?</string>
     <string name="share_gpx_separate">По отдельности</string>
     <string name="share_gpx_together">В один файл</string>
+    <string name="action_edit">Редактировать</string>
 </resources>
