--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -194,6 +194,7 @@
     <string name="form_tiles_list">Формирование списка тайлов</string>
     <string name="tracks_running">Записывается трек</string>
     <string name="tracks_title">Трек %s</string>
+    <string name="walkedit_title">Ввод обходом %s</string>
     <string name="tracks_stop">Стоп</string>
     <string name="tracks_open">Открыть</string>
     <string name="download_tiles_finished">Завершена загрузка тайлов</string>
