--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -194,6 +194,7 @@
     <string name="form_tiles_list">Form tiles list</string>
     <string name="tracks_running">Track is recording now</string>
     <string name="tracks_title">Track %s</string>
+    <string name="walkedit_title">Walk edit %s</string>
     <string name="tracks_stop">Stop</string>
     <string name="tracks_open">Open</string>
     <string name="download_tiles_finished">Tiles download finished</string>
