--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -143,7 +143,8 @@
     <string name="delete_point">Удалить точку</string>
     <string name="add_multipoint">Добавить мультиточку</string>
     <string name="delete_multipoint">Удалить мультиточку</string>
-    <string name="delete_done">Объект удален</string>
+    <string name="delete_item_done">Объект удален</string>
+    <string name="delete_layer_done">Слой удален</string>
     <string name="add_line">Добавить линию</string>
     <string name="delete_line">Удалить линию</string>
     <string name="write_track">Записать трек</string>
