--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -143,7 +143,8 @@
     <string name="delete_point">Delete point</string>
     <string name="add_multipoint">Add multipoint</string>
     <string name="delete_multipoint">Delete multipoint</string>
-    <string name="delete_done">Item deleted</string>
+    <string name="delete_item_done">Item deleted</string>
+    <string name="delete_layer_done">Layer deleted</string>
     <string name="add_line">Add line</string>
     <string name="delete_line">Delete line</string>
     <string name="write_track">Write track</string>
