--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -106,6 +106,8 @@
     <string name="apply">Apply</string>
     <string name="error_db_insert">Insert feature failed</string>
     <string name="error_db_update">Update feature failed</string>
+    <string name="error_db_query">Query feature failed</string>
+    <string name="error_db_delete">Delete feature failed</string>
     <string name="create_vector_layer">Create vector layer</string>
     <string name="new_layer">New layer</string>
     <string name="message_layer_created">Layer created</string>
