--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -208,6 +208,8 @@
     <string name="layerInfo">Layer info</string>
     <string name="geom_type">Geometry type</string>
     <string name="feature_count">Feature count</string>
+    <string name="layer_has_form">Layer has custom form</string>
+    <string name="layer_has_no_form">Layer does not have custom form</string>
     <string name="point">Point</string>
     <string name="multi_point">Multipoint</string>
     <string name="linestring">Linestring</string>
