--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -208,6 +208,8 @@
     <string name="layerInfo">Layer info</string>
     <string name="geom_type">Geometry type</string>
     <string name="feature_count">Feature count</string>
+    <string name="layer_local_path">Local path: %1$s</string>
+    <string name="layer_remote_path">Remote: %1$s</string>
     <string name="layer_has_form">Layer has custom form</string>
     <string name="layer_has_no_form">Layer does not have custom form</string>
     <string name="point">Point</string>
