--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -207,7 +207,8 @@
     <string name="alpha">Непрозрачность</string>
     <string name="layerInfo">Информация о слое</string>
     <string name="geom_type">Тип геометрии</string>
-    <string name="feature_count">Количество записей</string>
+    <string name="layer_geom_type">%1$s</string>
+    <string name="feature_count">Записей: %1$s</string>
     <string name="layer_local_path">Локальный путь: %1$s</string>
     <string name="layer_remote_path">Удаленный: %1$s</string>
     <string name="layer_has_form">У слоя есть пользовательская форма</string>
