--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -91,7 +91,9 @@
     <string name="longitude_caption">Долгота</string>
     <string name="altitude_caption">Высота</string>
     <string name="unit_meter">м</string>
+    <string name="unit_square_meter">м²</string>
     <string name="unit_kilometer">км</string>
+    <string name="unit_square_kilometer">км²</string>
     <string name="unit_second">с</string>
     <string name="unit_hour">ч</string>
     <string name="accuracy_caption">Точность</string>
