--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -163,6 +163,8 @@
     <string name="add_multipolygon">Добавить мультиполигон</string>
     <string name="delete_multipolygon">Удалить мультиполигон</string>
     <string name="save">Сохранить</string>
+    <string name="undo">Отмена</string>
+    <string name="redo">Повтор</string>
     <string name="error_create_feature">Ошибка создания записи</string>
     <string name="no">Нет</string>
     <string name="yes">Да</string>
