--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -163,6 +163,8 @@
     <string name="add_multipolygon">Add multipolygon</string>
     <string name="delete_multipolygon">Delete multipolygon</string>
     <string name="save">Save</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
     <string name="error_create_feature">Create feature failed</string>
     <string name="no">No</string>
     <string name="yes">Yes</string>
