--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -237,4 +237,6 @@
     <string name="share_gpx_together">All in one</string>
     <string name="action_edit">Edit</string>
     <string name="track_list">List</string>
+    <string name="label_field">" (label)"</string>
+    <string name="label_field_toast">Tap on field to select as label</string>
 </resources>
