--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -20,39 +20,39 @@
   -->
 
 <resources>
-    <string name="layers_drawer_open">Open layers list</string>
-    <string name="layers_drawer_close">Close layers list</string>
+    <string name="layers_drawer_open">Відкрити список шарів</string>
+    <string name="layers_drawer_close">Закрити список шарів</string>
     <string name="ok">OK</string>
-    <string name="create">Create</string>
-    <string name="cancel">Cancel</string>
+    <string name="create">Створити</string>
+    <string name="cancel">Скасувати</string>
     <string name="osm">OpenStreetMap</string>
-    <string name="layer_name">Layer name</string>
-    <string name="layer_url">Layer URL</string>
-    <string name="layer_url_hint">For example: http://{a,b,c}.tile.openstreetmap.org/{z}/{x}/{y}.png</string>
-    <string name="layer_type">TMS type</string>
-    <string name="create_layer">Create layer</string>
-    <string name="create_tms_layer">Create TMS layer</string>
+    <string name="layer_name">Ім'я шару</string>
+    <string name="layer_url">Посилання на шар</string>
+    <string name="layer_url_hint">Наприклад: http://{a,b,c}.tile.openstreetmap.org/{z}/{x}/{y}.png</string>
+    <string name="layer_type">Тип TMS</string>
+    <string name="create_layer">Створити шар</string>
+    <string name="create_tms_layer">Створити шар TMS</string>
     <string name="tmstype_osm">XYZ (OSM)</string>
     <string name="tmstype_normal">TMS (OSGeo spec.)</string>
-    <string name="error_invalid_url">The URL is invalid</string>
+    <string name="error_invalid_url">Посилання недійсне</string>
     <string name="nextgis_web">NextGIS Web</string>
-    <string name="ngw_login_title">NextGIS Web account</string>
-    <string name="ngw_login_description">Input NextGIS Web server URL, your login and password</string>
-    <string name="ngw_edit_login_description">Input your login and password for the NextGIS Web server</string>
-    <string name="ngw_url">NextGIS Web URL</string>
-    <string name="password">Password to connect server</string>
-    <string name="login">Login</string>
-    <string name="user_name">Login</string>
-    <string name="canceled">Canceled</string>
-    <string name="account_already_exists">Account already exist</string>
-    <string name="error_login">Login failed</string>
+    <string name="ngw_login_title">Акаунт NextGIS Web</string>
+    <string name="ngw_login_description">Введіть посилання на сервер NextGIS Web, ваш логін і пароль</string>
+    <string name="ngw_edit_login_description">Введіть ваш логін і пароль для серверу NextGIS Web</string>
+    <string name="ngw_url">Посилання на NextGIS Web</string>
+    <string name="password">Пароль для з'єднання з сервером</string>
+    <string name="login">Логін</string>
+    <string name="user_name">Логін</string>
+    <string name="canceled">Скасовано</string>
+    <string name="account_already_exists">Акаунт вже існує</string>
+    <string name="error_login">Помилка входу</string>
     <string name="account_setup">Account setup</string>
-    <string name="ngw_settings">NextGIS Web settings</string>
-    <string name="add_account">Add account</string>
-    <string name="add_account_summary">Add NextGIS Web account</string>
-    <string name="delete_account">Delete account</string>
-    <string name="delete_account_ask">Delete account?</string>
-    <string name="delete_account_summary">Delete account. All layers connected with this account will be deleted too. Active synchronization will be stopped.</string>
+    <string name="ngw_settings">Налаштування NextGIS Web</string>
+    <string name="add_account">Додати акаунт</string>
+    <string name="add_account_summary">Додати акаунт NextGIS Web</string>
+    <string name="delete_account">Видалити акаунт</string>
+    <string name="delete_account_ask">Видалити акаунт?</string>
+    <string name="delete_account_summary">Видалити аккаунт. Всі шари, пов'язані з цим акаунтом, будуть також видалені. Активна синхронізація буде зупинена.</string>
     <string name="delete_account_warn_msg">Account will be deleted!\nAll account layers will be deleted!\nCurrent sync will be stopped!</string>
     <string name="waiting">Waiting</string>
     <string name="wait_sync_stopping">Waiting of synchronization stopping</string>
