--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -237,4 +237,10 @@
     <string name="track_list">Список</string>
     <string name="label_field">" (метка)"</string>
     <string name="label_field_toast">Нажмите на поле для выбора в качестве метки</string>
+    <string name="location_disabled">Определение местоположения отключено</string>
+    <string name="location_disabled_msg">Приложение не может определить, где вы находитесь. Включите функцию \"Мое местоположение\".</string>
+    <string name="location_accuracy">Точность местоположения</string>
+    <string name="location_inaccuracy">Вы можете повысить точность местоположения, включив следующие функции:</string>
+    <string name="location_gps">GPS</string>
+    <string name="location_network">По Wi-Fi и координатам сети</string>
 </resources>
