--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -235,4 +235,10 @@
     <string name="track_list">List</string>
     <string name="label_field">" (label)"</string>
     <string name="label_field_toast">Tap on field to select as label</string>
+    <string name="location_disabled">Визначення місця розташування вимкнено</string>
+    <string name="location_disabled_msg">Програма не може визначити, де ви знаходитесь. Увімкніть опцію \"Моє місце розташування\".</string>
+    <string name="location_accuracy">Точність розташування</string>
+    <string name="location_inaccuracy">Ви можете підвищити точність позиціонування, увімкнувши такі функції:</string>
+    <string name="location_gps">GPS</string>
+    <string name="location_network">По Wi-Fi та координатам мережі</string>
 </resources>
