--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -239,4 +239,10 @@
     <string name="track_list">List</string>
     <string name="label_field">" (label)"</string>
     <string name="label_field_toast">Tap on field to select as label</string>
+    <string name="location_disabled">Location services disabled</string>
+    <string name="location_disabled_msg">Application needs access to your location. Please turn on location access.</string>
+    <string name="location_accuracy">Location accuracy</string>
+    <string name="location_inaccuracy">You can improve the accuracy of your location by turning on:</string>
+    <string name="location_gps">GPS</string>
+    <string name="location_network">Wi-Fi and mobile network coordinates</string>
 </resources>
