--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -2,8 +2,9 @@
   ~ Project:  NextGIS Mobile
   ~ Purpose:  Mobile GIS for Android.
   ~ Author:   Maxim Dubinin, maxim.dubinin@nextgis.com
+  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2016 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -88,12 +89,6 @@
     <string name="latitude_caption">Latitude</string>
     <string name="longitude_caption">Longitude</string>
     <string name="altitude_caption">Altitude</string>
-    <string name="unit_meter">m</string>
-    <string name="unit_square_meter">m²</string>
-    <string name="unit_kilometer">km</string>
-    <string name="unit_square_kilometer">km²</string>
-    <string name="unit_second">s</string>
-    <string name="unit_hour">h</string>
     <string name="accuracy_caption">Accuracy</string>
     <string name="set_attributes">Set attributes</string>
     <string name="latitude_caption_short">Lat</string>
