--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -230,6 +230,7 @@
     <string name="track_list">List</string>
     <string name="label_field">" (label)"</string>
     <string name="label_field_toast">Tap on field to select as label</string>
+    <string name="label_field_title">" (нажмите для выбора по умолчанию)"</string>
     <string name="location_disabled">Визначення місця розташування вимкнено</string>
     <string name="location_disabled_msg">Програма не може визначити, де ви знаходитесь. Увімкніть опцію \"Моє місце розташування\".</string>
     <string name="location_accuracy">Точність розташування</string>
