--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -53,20 +53,19 @@
     <string name="add_account_summary">Додати акаунт NextGIS Web</string>
     <string name="delete_account">Видалити акаунт</string>
     <string name="delete_account_ask">Видалити акаунт?</string>
-    <string name="delete_account_summary">Видалити аккаунт. Всі шари, пов\'язані з цим акаунтом, будуть також видалені. Активна синхронізація буде зупинена.</string>
-    <string name="delete_account_warn_msg">Account will be deleted!\nAll account layers will be deleted!\nCurrent sync will be stopped!</string>
-    <string name="waiting">Waiting</string>
-    <string name="wait_sync_stopping">Waiting of synchronization stopping</string>
-    <string name="add">Add</string>
-    <string name="select">Select</string>
-    <string name="select_ngw_layer">Select NextGIS Web Layer</string>
-    <string name="ngw_account">NextGIS Web account</string>
-    <string name="loading_summary">Wait a little. The data is loading</string>
+    <string name="delete_account_summary">Аккаунт буде видалений!\nВсі шари акаунту будуть видалені!\nПоточна синхронізація буде зупинена!</string>
+    <string name="waiting">Очікування</string>
+    <string name="wait_sync_stopping">Очікування зупинки синхронізації</string>
+    <string name="add">Додати</string>
+    <string name="select">Вибрати</string>
+    <string name="select_ngw_layer">Вибрати шар NextGIS Web</string>
+    <string name="ngw_account">Акаунт NextGIS Web</string>
+    <string name="loading_summary">Зачекайте трохи. Дані завантажуються</string>
     <string name="up_dots">..</string>
-    <string name="up">Up</string>
-    <string name="error_connect_failed">Connect failed</string>
+    <string name="up">Вгору</string>
+    <string name="error_connect_failed">Помилка підключення</string>
     <string name="resource_group">Resource group</string>
-    <string name="accounts">Accounts</string>
+    <string name="accounts">Акаунти</string>
     <string name="raster">Raster</string>
     <string name="vector">Vector</string>
     <string name="raster_layer">Raster layer</string>
