--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -47,7 +47,7 @@
     <string name="canceled">Скасовано</string>
     <string name="account_already_exists">Акаунт вже існує</string>
     <string name="error_login">Помилка входу</string>
-    <string name="account_setup">Account setup</string>
+    <string name="account_setup">Налаштування акаунту</string>
     <string name="ngw_settings">Налаштування NextGIS Web</string>
     <string name="add_account">Додати акаунт</string>
     <string name="add_account_summary">Додати акаунт NextGIS Web</string>
@@ -64,36 +64,36 @@
     <string name="up_dots">..</string>
     <string name="up">Вгору</string>
     <string name="error_connect_failed">Помилка підключення</string>
-    <string name="resource_group">Resource group</string>
+    <string name="resource_group">Групи ресурсів</string>
     <string name="accounts">Акаунти</string>
-    <string name="raster">Raster</string>
-    <string name="vector">Vector</string>
-    <string name="raster_layer">Raster layer</string>
-    <string name="vector_layer">Vector layer</string>
-    <string name="pg_layer">PostGIS layer</string>
-    <string name="credentials_opt">Credentials (optional)</string>
-    <string name="layer_type_optional">Tile layer type (optional)</string>
-    <string name="sync">Synchronization</string>
-    <string name="auto_sync">Automatic synchronization</string>
-    <string name="auto_sync_summary">Synchronization at regular intervals</string>
-    <string name="sync_interval">Synchronization interval</string>
-    <string name="actions">Actions</string>
-    <string name="sync_layers">Layers</string>
-    <string name="sync_layers_summary">Check layers to synchronize with server</string>
-    <string name="layer_group">Group</string>
-    <string name="layer_ngw_raster">NGW Raster</string>
-    <string name="layer_ngw_vector">NGW Layer</string>
-    <string name="layer_tms">Tile Raster</string>
-    <string name="layer_na">Not available</string>
-    <string name="latitude_caption">Latitude</string>
-    <string name="longitude_caption">Longitude</string>
-    <string name="altitude_caption">Altitude</string>
-    <string name="accuracy_caption">Accuracy</string>
-    <string name="set_attributes">Set attributes</string>
-    <string name="latitude_caption_short">Lat</string>
-    <string name="longitude_caption_short">Long</string>
-    <string name="altitude_caption_short">Alt</string>
-    <string name="accuracy_caption_short">Acc</string>
+    <string name="raster">Растр</string>
+    <string name="vector">Вектор</string>
+    <string name="raster_layer">Растровий шар</string>
+    <string name="vector_layer">Векторний шар</string>
+    <string name="pg_layer">Шар PostGIS</string>
+    <string name="credentials_opt">Логін/пароль (опціонально)</string>
+    <string name="layer_type_optional">Тип тайлового шару (опціонально)</string>
+    <string name="sync">Синхронізація</string>
+    <string name="auto_sync">Автоматична синхронізація</string>
+    <string name="auto_sync_summary">Синхронізація через регулярні інтервали</string>
+    <string name="sync_interval">Інтервал синхронізації</string>
+    <string name="actions">Дії</string>
+    <string name="sync_layers">Шари</string>
+    <string name="sync_layers_summary">Перевірка шарів для синхронізації з сервером</string>
+    <string name="layer_group">Група</string>
+    <string name="layer_ngw_raster">Растр NGW</string>
+    <string name="layer_ngw_vector">Шар NGW</string>
+    <string name="layer_tms">Тайловий растр</string>
+    <string name="layer_na">Не доступний</string>
+    <string name="latitude_caption">Широта</string>
+    <string name="longitude_caption">Довгота</string>
+    <string name="altitude_caption">Висота</string>
+    <string name="accuracy_caption">Точність</string>
+    <string name="set_attributes">Встановити атрибути</string>
+    <string name="latitude_caption_short">Шир.</string>
+    <string name="longitude_caption_short">Дов.</string>
+    <string name="altitude_caption_short">Вис.</string>
+    <string name="accuracy_caption_short">Точ.</string>
     <string name="accurate_location">Accurate location</string>
     <string name="accurate_taking">Accumulating and averaging location…</string>
     <string name="action_settings">Settings</string>
